--- a/net/ipv4/Makefile
+++ b/net/ipv4/Makefile
@@ -21,8 +21,7 @@ obj-$(CONFIG_NET_IPIP) += ipip.o
 obj-$(CONFIG_NET_IPGRE_DEMUX) += gre.o
 obj-$(CONFIG_NET_IPGRE) += ip_gre.o
 obj-$(CONFIG_SYN_COOKIES) += syncookies.o
-obj-$(CONFIG_MPTCP) += mptcp.o mptcp_ipv4.o mptcp_ofo_queue.o
-obj-$(CONFIG_MPTCP_PM) += mptcp_pm.o
+obj-$(CONFIG_MPTCP) += mptcp.o mptcp_ipv4.o mptcp_ofo_queue.o mptcp_pm.o
 obj-$(CONFIG_INET_AH) += ah4.o
 obj-$(CONFIG_INET_ESP) += esp4.o
 obj-$(CONFIG_INET_IPCOMP) += ipcomp.o
